# multi-agent-ev

./: .env.example  .gitignore  PLAN.md  alembic.ini  ev_ai_soccer_betting_system.md  pyproject.toml
agents/: __init__.py  anomaly_reasoner.py  base_agent.py  message_bus.py  orchestrator.py
agents/tools/: __init__.py  analysis_tools.py  db_tools.py
backtesting/: __init__.py  historical_loader.py  metrics.py  reports.py  simulator.py  walk_forward.py
cli/: app.py  formatters.py
cli/commands/: backtest.py  bankroll.py  bet.py  dashboard.py  entity.py  ingest.py  model.py  scan.py
config/: bookmakers.py  constants.py  leagues.py  settings.py
dashboard/: api.py  app.py  explainability.py  grading.py  scanner.py
dashboard/static/: index.html
dashboard/vercel-deploy/: index.html
db/: engine.py  session.py
db/migrations/: env.py
db/models/: __init__.py  base.py  betting.py  (+6 more)
entity_resolution/: __init__.py  alias_store.py  confidence.py  cross_source.py  matchers.py  resolver.py  seed_data.py
ev_engine/: __init__.py  calculator.py  closing_line.py  filters.py  odds_comparison.py  signal_generator.py
features/: consistency.py  drift.py  feature_store.py  opponent_adjustment.py  per90.py  pipeline.py  rolling.py
ingestion/: base_client.py  scheduler.py
models/: __init__.py  base_model.py  btts.py  calibration.py  dixon_coles.py  ensemble.py  evaluation.py  negative_binomial.py  offsides.py  player_props.py  poisson.py  registry.py
risk/: bankroll.py  exposure.py  kelly.py  position_sizer.py  stops.py
scripts/: seed_aliases.py
tests/: conftest.py
(+28 files in other folders)
