[project]
name = "ev-system"
version = "0.1.0"
description = "AI Soccer EV Betting Platform"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer[all]>=0.12",
    "rich>=13.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "scipy>=1.14",
    "numpy>=1.26",
    "pandas>=2.2",
    "rapidfuzz>=3.9",
    "apscheduler>=3.10",
    "anthropic>=0.40",
    "nicegui>=2.0",
    "joblib>=1.4",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiofiles>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "factory-boy>=3.3",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
ev = "cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "config",
    "db",
    "ingestion",
    "entity_resolution",
    "features",
    "models",
    "ev_engine",
    "risk",
    "backtesting",
    "agents",
    "cli",
    "dashboard",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
